--- a/_config.yml
+++ b/_config.yml
@@ -45,8 +45,8 @@ post_survey: "https://www.surveymonkey.com/r/swc_post_workshop_v1?workshop_id="
 start_time: 0
 
 # Specify that things in the episodes collection should be output.
-collections: Unix shell 
-  episodes: Create files and directories
+collections: 
+  episodes: 
     output: true
     permalink: /:path/
   extras:
